Dictionary in Java

--- a/SmileyDictionary/nbproject/project.properties
+++ b/SmileyDictionary/nbproject/project.properties
@@ -37,8 +37,8 @@ file.reference.cmutimelex.jar=C:\\Users\\User\\Downloads\\freetts-1.2\\lib\\cmut
 file.reference.en_us.jar=C:\\Users\\User\\Downloads\\freetts-1.2\\lib\\en_us.jar
 file.reference.freetts-jsapi10.jar=C:\\Users\\User\\Downloads\\freetts-1.2\\lib\\freetts-jsapi10.jar
 file.reference.freetts.jar=C:\\Users\\User\\Downloads\\freetts-1.2\\lib\\freetts.jar
+file.reference.jsapi.jar=C:\\Users\\User\\Downloads\\freetts-1.2\\lib\\jsapi.jar
 file.reference.mbrola.jar=C:\\Users\\User\\Downloads\\freetts-1.2\\lib\\mbrola.jar
-file.reference.mbrola.jar-1=C:\\Users\\User\\Downloads\\freetts-1.2\\mbrola\\mbrola.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -51,7 +51,7 @@ javac.classpath=\
     ${file.reference.freetts-jsapi10.jar}:\
     ${file.reference.freetts.jar}:\
     ${file.reference.mbrola.jar}:\
-    ${file.reference.mbrola.jar-1}
+    ${file.reference.jsapi.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
